# windows-notice-monitor

./: .gitignore  PRODUCT_PLAN.md  README.md  config.example.yaml  config.toml.example  plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
pc_wechat_bark/: bark.py  classifier.py  cli.py  config.py  models.py  poller.py  service.py  source.py  state.py
scripts/: register_startup.ps1  run.ps1
src/: app.py  config.py  models.py
src/dedupe/: memory_dedupe.py
src/listener/: windows_notifications.py
src/notifiers/: bark_notifier.py  wxpusher_notifier.py
src/parser/: wechat_notification_parser.py
src/store/: state_store.py
tests/: test_classifier.py  test_dedupe.py  test_parser.py  test_poller.py  test_windows_listener.py
