[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-wechat-bark"
version = "0.1.0"
description = "Bark notifier service built on top of wechat-cli"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1,<9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pc-wechat-bark = "pc_wechat_bark.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
